ocaml/ALG_Parser.output
   0  $accept : %entry% $end

   1  start1 : expression
   2         | expr
   3         | geoexpr

   4  expression : geoexpr
   5             | expr

   6  geoexpr : ellipse
   7          | polygon
   8          | line
   9          | point
  10          | line PARA line
  11          | line INTERS line
  12          | ellipse INTERS ellipse

  13  expr : NUM
  14       | INT
  15       | ID
  16       | expr PLUS expr
  17       | expr MINUS expr
  18       | expr MUL expr
  19       | expr DIV expr
  20       | expr PERC expr

  21  ellipse : LBRACKET point COMMA expr COMMA expr RBRACKET

  22  polygon : LBRACKET points RBRACKET

  23  line : LBRACKET point COMMA point RBRACKET

  24  points : point COMMA point COMMA point
  25         | point COMMA points

  26  point : LBRACKET expr COMMA expr RBRACKET

  27  %entry% : '\001' start1

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start1  (27)

	LBRACKET  shift 3
	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	start1  goto 7
	expression  goto 8
	expr  goto 9
	geoexpr  goto 10
	ellipse  goto 11
	polygon  goto 12
	line  goto 13
	point  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ellipse : LBRACKET . point COMMA expr COMMA expr RBRACKET  (21)
	polygon : LBRACKET . points RBRACKET  (22)
	line : LBRACKET . point COMMA point RBRACKET  (23)
	point : LBRACKET . expr COMMA expr RBRACKET  (26)

	LBRACKET  shift 15
	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 16
	point  goto 17
	points  goto 18


state 4
	expr : ID .  (15)

	.  reduce 15


state 5
	expr : NUM .  (13)

	.  reduce 13


state 6
	expr : INT .  (14)

	.  reduce 14


state 7
	%entry% : '\001' start1 .  (27)

	.  reduce 27


state 8
	start1 : expression .  (1)

	.  reduce 1


9: reduce/reduce conflict (reduce 2, reduce 5) on $end
state 9
	start1 : expr .  (2)
	expression : expr .  (5)
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)

	PLUS  shift 19
	MINUS  shift 20
	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	$end  reduce 2


10: reduce/reduce conflict (reduce 3, reduce 4) on $end
state 10
	start1 : geoexpr .  (3)
	expression : geoexpr .  (4)

	.  reduce 3


state 11
	geoexpr : ellipse .  (6)
	geoexpr : ellipse . INTERS ellipse  (12)

	INTERS  shift 24
	$end  reduce 6


state 12
	geoexpr : polygon .  (7)

	.  reduce 7


state 13
	geoexpr : line .  (8)
	geoexpr : line . PARA line  (10)
	geoexpr : line . INTERS line  (11)

	PARA  shift 25
	INTERS  shift 26
	$end  reduce 8


state 14
	geoexpr : point .  (9)

	.  reduce 9


state 15
	point : LBRACKET . expr COMMA expr RBRACKET  (26)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 16


state 16
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)
	point : LBRACKET expr . COMMA expr RBRACKET  (26)

	COMMA  shift 27
	PLUS  shift 19
	MINUS  shift 20
	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	.  error


state 17
	ellipse : LBRACKET point . COMMA expr COMMA expr RBRACKET  (21)
	line : LBRACKET point . COMMA point RBRACKET  (23)
	points : point . COMMA point COMMA point  (24)
	points : point . COMMA points  (25)

	COMMA  shift 28
	.  error


state 18
	polygon : LBRACKET points . RBRACKET  (22)

	RBRACKET  shift 29
	.  error


state 19
	expr : expr PLUS . expr  (16)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 30


state 20
	expr : expr MINUS . expr  (17)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 31


state 21
	expr : expr MUL . expr  (18)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 32


state 22
	expr : expr DIV . expr  (19)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 33


state 23
	expr : expr PERC . expr  (20)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 34


state 24
	geoexpr : ellipse INTERS . ellipse  (12)

	LBRACKET  shift 35
	.  error

	ellipse  goto 36


state 25
	geoexpr : line PARA . line  (10)

	LBRACKET  shift 37
	.  error

	line  goto 38


state 26
	geoexpr : line INTERS . line  (11)

	LBRACKET  shift 37
	.  error

	line  goto 39


state 27
	point : LBRACKET expr COMMA . expr RBRACKET  (26)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 40


state 28
	ellipse : LBRACKET point COMMA . expr COMMA expr RBRACKET  (21)
	line : LBRACKET point COMMA . point RBRACKET  (23)
	points : point COMMA . point COMMA point  (24)
	points : point COMMA . points  (25)

	LBRACKET  shift 15
	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 41
	point  goto 42
	points  goto 43


state 29
	polygon : LBRACKET points RBRACKET .  (22)

	.  reduce 22


state 30
	expr : expr . PLUS expr  (16)
	expr : expr PLUS expr .  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)

	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	$end  reduce 16
	COMMA  reduce 16
	RBRACKET  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16


state 31
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr MINUS expr .  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)

	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	$end  reduce 17
	COMMA  reduce 17
	RBRACKET  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17


state 32
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr MUL expr .  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)

	.  reduce 18


state 33
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr DIV expr .  (19)
	expr : expr . PERC expr  (20)

	.  reduce 19


state 34
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)
	expr : expr PERC expr .  (20)

	.  reduce 20


state 35
	ellipse : LBRACKET . point COMMA expr COMMA expr RBRACKET  (21)

	LBRACKET  shift 15
	.  error

	point  goto 44


state 36
	geoexpr : ellipse INTERS ellipse .  (12)

	.  reduce 12


state 37
	line : LBRACKET . point COMMA point RBRACKET  (23)

	LBRACKET  shift 15
	.  error

	point  goto 45


state 38
	geoexpr : line PARA line .  (10)

	.  reduce 10


state 39
	geoexpr : line INTERS line .  (11)

	.  reduce 11


state 40
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)
	point : LBRACKET expr COMMA expr . RBRACKET  (26)

	RBRACKET  shift 46
	PLUS  shift 19
	MINUS  shift 20
	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	.  error


state 41
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)
	ellipse : LBRACKET point COMMA expr . COMMA expr RBRACKET  (21)

	COMMA  shift 47
	PLUS  shift 19
	MINUS  shift 20
	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	.  error


state 42
	line : LBRACKET point COMMA point . RBRACKET  (23)
	points : point . COMMA point COMMA point  (24)
	points : point COMMA point . COMMA point  (24)
	points : point . COMMA points  (25)

	COMMA  shift 48
	RBRACKET  shift 49
	.  error


state 43
	points : point COMMA points .  (25)

	.  reduce 25


state 44
	ellipse : LBRACKET point . COMMA expr COMMA expr RBRACKET  (21)

	COMMA  shift 50
	.  error


state 45
	line : LBRACKET point . COMMA point RBRACKET  (23)

	COMMA  shift 51
	.  error


state 46
	point : LBRACKET expr COMMA expr RBRACKET .  (26)

	.  reduce 26


state 47
	ellipse : LBRACKET point COMMA expr COMMA . expr RBRACKET  (21)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 52


state 48
	points : point COMMA . point COMMA point  (24)
	points : point COMMA point COMMA . point  (24)
	points : point COMMA . points  (25)

	LBRACKET  shift 15
	.  error

	point  goto 53
	points  goto 43


state 49
	line : LBRACKET point COMMA point RBRACKET .  (23)

	.  reduce 23


state 50
	ellipse : LBRACKET point COMMA . expr COMMA expr RBRACKET  (21)

	ID  shift 4
	NUM  shift 5
	INT  shift 6
	.  error

	expr  goto 41


state 51
	line : LBRACKET point COMMA . point RBRACKET  (23)

	LBRACKET  shift 15
	.  error

	point  goto 54


state 52
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . PERC expr  (20)
	ellipse : LBRACKET point COMMA expr COMMA expr . RBRACKET  (21)

	RBRACKET  shift 55
	PLUS  shift 19
	MINUS  shift 20
	MUL  shift 21
	DIV  shift 22
	PERC  shift 23
	.  error


state 53
	points : point . COMMA point COMMA point  (24)
	points : point COMMA point . COMMA point  (24)
	points : point COMMA point COMMA point .  (24)
	points : point . COMMA points  (25)

	COMMA  shift 48
	RBRACKET  reduce 24


state 54
	line : LBRACKET point COMMA point . RBRACKET  (23)

	RBRACKET  shift 49
	.  error


state 55
	ellipse : LBRACKET point COMMA expr COMMA expr RBRACKET .  (21)

	.  reduce 21


Rules never reduced:
	expression : geoexpr  (4)
	expression : expr  (5)


State 9 contains 1 reduce/reduce conflict.
State 10 contains 1 reduce/reduce conflict.


56 terminals, 11 nonterminals
28 grammar rules, 56 states
